# aw_drone

./: .gitignore  multi_run.py  readme-git.txt
aw_2d_nav/: CMakeLists.txt  package.xml
aw_2d_nav/src/: aw_2d_nav.cpp
aw_hector_quadrotor/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
aw_hector_quadrotor/cfg/: default.rviz  liuB.yaml  liuB2.yaml  maze1.yaml  maze2.yaml  maze3.yaml  maze4.yaml  maze5.yaml  midroom.yaml  threshold.yaml
aw_hector_quadrotor/goals/: maze1.yaml  maze2.yaml  maze3.yaml  maze4.yaml  midroom.yaml  threshold.yaml
aw_hector_quadrotor/launch/: 2_drivers.launch  ardrone_driver.launch  common.launch  ddd_2d.launch  empty_world.launch  map.launch  maze1.launch  maze2.launch  maze3-10.launch  maze3-4.launch  maze3-6.launch  maze3-8.launch  maze3.launch  maze4-10.launch  maze4-4.launch  maze4-6.launch  maze4-8.launch  maze4-test.launch  midroom.launch  sim10.launch  sim4.launch  sim6.launch  sim8.launch  spawn_quadrotor.launch  threshold.launch
aw_hector_quadrotor/maps/: liuB.pgm  liuB.yaml  liuB2.pgm  liuB2.yaml  maze1.pgm  maze1.yaml  maze2.pgm  maze2.yaml  maze3.pgm  maze3.yaml  maze4.pgm  maze4.yaml  maze5.pgm  maze5.yaml  midroom.pgm  midroom.yaml  threshold.pgm  threshold.yaml
aw_hector_quadrotor/src/: aw_create_sqlite_db.py  aw_results_plot.py
aw_hector_quadrotor/world/: empty.world
aw_multi_solver_wrapper/: CMakeLists.txt  package.xml
aw_multi_solver_wrapper/launch/: aw_multi_solver_wapper.launch  aw_random_goals_test.launch
aw_multi_solver_wrapper/src/: aw_ascii_pgm_to_problem.py  aw_ascii_pgm_to_random_goals.py  aw_multi_service.py  liuB.pgm  liuB2.pgm  maze3-mini-ascii.pgm  maze3.pgm  maze4.pgm  maze5.pgm  paths.txt  threshold.pgm
aw_multi_solver_wrapper/srv/: MultiPlanner.srv
aw_task_deligator/: CMakeLists.txt  package.xml
aw_task_deligator/goals/: cityGoals.yaml  ddd.yaml  midroom.yaml
aw_task_deligator/include/: TaskDeligator.h  aw_drone.h  matrix.h  threshold.h
aw_task_deligator/launch/: test.launch
aw_task_deligator/msg/: Objectives.msg
aw_task_deligator/src/: aw_drone.cpp  (+4 more)
(+78 files in other folders)
